client-home-page : Fix positioning of page layout
Changes
- Change body width and height to remove scrollbars
- Change root width and height to position the grid in the center
- Change grid of tables to only need 3 columns

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 #root {
-  max-height: 1080px;
-  max-width: 1920px;
   min-height: 95vh;
+  max-height: 100%;
+  width: 100%;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
